--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input type="text" value="akita" name="dogBreed">        
             <input type="submit" value="Unleash the doggos!">
         </form>
+        <p id="js-error-message" class="error-message"></p>
         <section class="results hidden">
           <h2>Look at these dogs!</h2>
           <div class="results-img" alt="placeholder"></div>
